--- a/src/Bookstore.Application/Bookstore.Application.csproj
+++ b/src/Bookstore.Application/Bookstore.Application.csproj
@@ -5,6 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\Bookstore.Domain\Bookstore.Domain.csproj" />
 		<ProjectReference Include="..\Bookstore.Shared\Bookstore.Shared.csproj" />
