Added invoice generation sent by email

--- a/src/Bookstore.Api/appsettings.json
+++ b/src/Bookstore.Api/appsettings.json
@@ -20,5 +20,13 @@
 	"SuperAdminAccount": {
 		"Email": "superadmin@mail.com",
 		"Password": "superadminpassword"
+	},
+
+	"EmailConfiguration": {
+		"From": "Bookstore",
+		"SmtpServer": "smtp.gmail.com",
+		"Port": 587,
+		"Username": "yourusername",
+		"Password": "yourpassword"
 	}
 }
